# aikon-demo

./: .env.dev.template  .gitignore  .gitmodules  README.md  pull-front.sh  requirements-prod.txt  run.sh  setup.sh
front/: .env.template  README.md  pyproject.toml  requirements-prod.txt  requirements.txt
front/datasets/: forms.py  models.py  urls.py  utils.py  views.py
front/datasets/migrations/: 0006_dataset_metadata_file.py
front/demowebsite/: urls.py
front/demowebsite/settings/: base.py  dev.py  prod.py
front/dticlustering/: forms.py  models.py  tasks.py  urls.py  views.py
front/dticlustering/migrations/: 0010_dticlustering_finished_on.py  0011_dticlustering_crops.py  0012_alter_dticlustering_crops.py  0013_remove_dticlustering_pipeline_and_more.py  0013_watermarkspipelines.py
front/interface/: README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
front/interface/sass/: main.scss
front/interface/src/: main.ts
front/pipelines/: forms.py  models.py
front/pipelines/migrations/: 0002_pipeline_finished_on.py  0003_delete_pipeline.py  (+2 more)
front/regions/: forms.py  models.py  tasks.py  urls.py  views.py
front/search/: forms.py  models.py  urls.py  views.py  widgets.py
front/shared/: forms.py  mails.py  urls.py  utils.py  views.py
front/similarity/: forms.py  models.py  tasks.py
front/tasking/: forms.py  models.py  views.py
front/watermarks/: forms.py  models.py  urls.py  views.py
front/webpack/: package-lock.json  package.json  test.html  tsconfig.json  webpack.common.js
(+187 files in other folders)
